linux-kbuild-2.6 (2.6.33~rc8-1) UNRELEASED; urgency=low

  [ Ben Hutchings ]
  * New upstream release candidate

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 20 Feb 2010 04:19:45 +0000

linux-kbuild-2.6 (2.6.32-1) unstable; urgency=low

  [ Ben Hutchings ]
  * New upstream version. (closes: #560090)
  * Include new script module-common.lds, thanks to Zoran Dzelajlija.

  [ Bastian Blank ]
  * Move contents of linux-kbuild package to /usr/lib.

 -- Bastian Blank <waldi@debian.org>  Fri, 11 Dec 2009 16:16:12 +0100

linux-kbuild-2.6 (2.6.31.2-1) unstable; urgency=low

  * Upload to unstable.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Oct 2009 18:38:44 +0000

linux-kbuild-2.6 (2.6.31.2-1~experimental.1) experimental; urgency=low

  [ Bastian Blank ]
  * New upstream version.

  [ Ben Hutchings ]
  * Include new script gcc-x86_32-has-stack-protector.sh.
  * Add myself to Uploaders.
  * New upstream version (2.6.31.2).

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 17 Oct 2009 23:05:27 +0100

linux-kbuild-2.6 (2.6.30-1) unstable; urgency=low

  * New upstream version.

 -- Bastian Blank <waldi@debian.org>  Wed, 17 Jun 2009 16:49:57 +0200

linux-kbuild-2.6 (2.6.29-1) unstable; urgency=low

  * New upstream version. 
  * Autogenerate list of supported options in modpost. (closes: #518961)
    - Build-depend against python.
  * Use debhelper compat level 7.

 -- Bastian Blank <waldi@debian.org>  Thu, 26 Mar 2009 12:54:47 +0100

linux-kbuild-2.6 (2.6.28-1) unstable; urgency=low

  * New upstream version.

 -- Bastian Blank <waldi@debian.org>  Sun, 22 Feb 2009 13:45:39 +0100

linux-kbuild-2.6 (2.6.26-3) unstable; urgency=low

  * Fix recursive installation. (closes: #494435)

 -- Bastian Blank <waldi@debian.org>  Sun, 10 Aug 2008 13:01:41 +0200

linux-kbuild-2.6 (2.6.26-2) unstable; urgency=low

  * Include new scripts. (closes: #494435)

 -- Bastian Blank <waldi@debian.org>  Sat, 09 Aug 2008 20:45:12 +0200

linux-kbuild-2.6 (2.6.26-1) unstable; urgency=low
