@@ -2,6 +2,7 @@ linux-kbuild-2.6 (2.6.33~rc8-1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * New upstream release candidate
+  * Include ia64-specific scripts (Closes: #392592)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 20 Feb 2010 04:19:45 +0000
 
